--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
 * {
    margin: 0;
    padding: 0;
-   box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+           box-sizing: border-box;
 }
 
 body {
@@ -27,30 +28,51 @@ body {
    font-family: 'Roboto', sans-serif;
    background-color: var(--clr-background);
    color: var(--clr-white);
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: center;
-   align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    font-weight: var(--font-weight);
 }
 
 .wrapper {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   flex-direction: column;
-   align-items: center;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: column;
+           flex-direction: column;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    gap: 1.2rem;
    width: 40%;
 }
 
 .icons__wrap {
    width: 100%;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
-   justify-content: flex-end;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: end;
+       -ms-flex-pack: end;
+           justify-content: flex-end;
    gap: 5px;
 }
 
 .themeIcon__icon {
    color: var(--clr-icon);
+   -webkit-transition: all .2s ease-out;
+   -o-transition: all .2s ease-out;
    transition: all .2s ease-out;
 }
 
@@ -71,6 +93,8 @@ body {
    border: none;
    padding: .4rem;
    border-radius: .5rem;
+   -webkit-transition: outline .2s ease-out;
+   -o-transition: outline .2s ease-out;
    transition: outline .2s ease-out;
    
 }
@@ -100,11 +124,18 @@ body {
 .password {
    width: 100%;
    background-color: var(--clr-main);
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
-   align-items: center;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    padding: 1em 1.5em 1em 2em;
-   box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
+   -webkit-box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
+           box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
 }
 
 .password__generated {
@@ -122,9 +153,13 @@ body {
    color: var(--clr-accent);
    background-color: transparent;
    cursor: pointer;
+   -webkit-transition: color .2s ease-out;
+   -o-transition: color .2s ease-out;
    transition: color .2s ease-out;
    padding: .5rem;
    border-radius: .7rem;
+   -webkit-transition: background-color .2s ease-in-out, opacity .2s ease-in-out;
+   -o-transition: background-color .2s ease-in-out, opacity .2s ease-in-out;
    transition: background-color .2s ease-in-out, opacity .2s ease-in-out;
 }
 
@@ -142,6 +177,8 @@ body {
    left: -28%;
    margin-left: -75px;
    opacity: 0;
+   -webkit-transition: opacity 0.3s;
+   -o-transition: opacity 0.3s;
    transition: opacity 0.3s;
  }
  
@@ -179,16 +216,28 @@ body {
    width: 100%;
    padding: 2em;
    background-color: var(--clr-main);
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   flex-direction: column;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: column;
+           flex-direction: column;
    gap: 1rem;
-   box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
+   -webkit-box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
+           box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
 }
 
 .settings__chars {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
-   align-items: center;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    font-size: 1.1rem;
 }
 
@@ -199,8 +248,13 @@ body {
 }
 
 .settings__include {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   flex-direction: column;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: column;
+           flex-direction: column;
    gap: 1.2rem;
    font-size: 1.1rem;
 }
@@ -208,9 +262,15 @@ body {
 .settings__strength {
    background-color: var(--clr-main-darker);
    padding: 1em 2em;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
-   align-items: center;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
 }
 
 .settings__strength > p {
@@ -220,20 +280,28 @@ body {
 }
 
 .settings__strength-str {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
    gap: 1rem;
 }
 
 .settings__range {
-   appearance: none;
+   -webkit-appearance: none;
+      -moz-appearance: none;
+           appearance: none;
    width: 100%;
    height: .75rem;
    border-radius: 5px;
    margin-bottom: 1rem;
    outline: none;
    -webkit-transition: .2s;
+   -webkit-transition: opacity .2s;
+   -o-transition: opacity .2s;
    transition: opacity .2s;
    z-index: 1;
+   background: -webkit-gradient(linear, left top, right top, color-stop(22.222%, var(--clr-accent)), color-stop(22.222%, var(--clr-main-darker)));
+   background: -o-linear-gradient(left, var(--clr-accent) 22.222%, var(--clr-main-darker) 22.222%);
    background: linear-gradient(to right, var(--clr-accent) 22.222%, var(--clr-main-darker) 22.222%)
 }
 
@@ -245,6 +313,7 @@ body {
    border-radius: 50%; 
    background: var(--clr-accent);
    cursor: pointer;
+   -webkit-transition: all .2s ease-out;
    transition: all .2s ease-out;
 }
 
@@ -254,6 +323,7 @@ body {
    border-radius: 50%; 
    background: var(--clr-accent);
    cursor: pointer;
+   -moz-transition: all .2s ease-out;
    transition: all .2s ease-out;
 }
 
@@ -275,7 +345,9 @@ body {
 
 input[type="checkbox"] {
    opacity: 0;
-   appearance: none;
+   -webkit-appearance: none;
+      -moz-appearance: none;
+           appearance: none;
 }
 
 input[type="checkbox"] + label {
@@ -304,7 +376,9 @@ input[type="checkbox"]:checked + label:after {
    position: absolute;
    left: .625rem;
    top:.625rem;
-   transform: translate(-50%, -50%);
+   -webkit-transform: translate(-50%, -50%);
+       -ms-transform: translate(-50%, -50%);
+           transform: translate(-50%, -50%);
    background: var(--clr-accent);
    width: .625rem;
    height: .625rem;
@@ -323,9 +397,15 @@ input[type="checkbox"]:checked + label:after {
 }
 
 .settings__generate {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: center;
-   align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    gap: .5rem;
    padding: 1em 2em;
    border: none;
@@ -334,6 +414,8 @@ input[type="checkbox"]:checked + label:after {
    font-size: 1rem;
    text-transform: uppercase;
    font-weight: 700;
+   -webkit-transition: background-color .2s ease-out;
+   -o-transition: background-color .2s ease-out;
    transition: background-color .2s ease-out;
 }
 
