--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-   --clr-background: hsl(252, 11%, 9%);
+   /* --clr-background: hsl(252, 11%, 9%);
    --clr-main: hsl(249, 8%, 17%);
    --clr-main-darker: hsl(249, 11%, 13%);
    --clr-accent: hsl(54, 83%, 66%);
@@ -8,7 +8,7 @@
    --clr-outline: hsl(255, 8%, 50%);
    --clr-gray: hsl(249, 4%, 34%);
    --clr-checkbox-hover: 54, 83%, 66%;
-   --font-weight: 400;
+   --font-weight: 400; */
    --clr-weak: hsl(0, 70%, 52%);
    --clr-medium: hsl(54, 83%, 66%);
    --clr-strong: hsl(145, 74%, 49%);
@@ -163,7 +163,7 @@ body {
    transition: background-color .2s ease-in-out, opacity .2s ease-in-out;
 }
 
- .password__copy .tooltiptext {
+.password__copy .tooltiptext {
    visibility: hidden;
    width: 140px;
    background-color: var(--clr-accent);
@@ -180,7 +180,7 @@ body {
    -webkit-transition: opacity 0.3s;
    -o-transition: opacity 0.3s;
    transition: opacity 0.3s;
- }
+}
  
  .password__copy .tooltiptext::after {
    content: "";
@@ -191,12 +191,13 @@ body {
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent var(--clr-accent) transparent;
- }
+}
  
- .password__copy:hover .tooltiptext {
+.password__copy:hover .tooltiptext {
    visibility: visible;
    opacity: 0.8;
- }
+}
+
 
 .password__copy-icon {
    width: 1.5rem;
@@ -423,6 +424,7 @@ input[type="checkbox"]:checked + label:after {
    background-color: var(--clr-accent-darker);
 }
 
+
 .settings__generate:active {
    background-color: var(--clr-accent);
 }
@@ -430,6 +432,11 @@ input[type="checkbox"]:checked + label:after {
 .settings__generate-icon {
    width: 1.5rem;
    height: 1.5rem;
+   transition: transform .2s ease-out;
+}
+
+.settings__generate:hover > .settings__generate-icon {
+   transform: translateX(0.375rem);
 }
 
 @media only screen and (min-width: 1280px) {
