--- a/style.css
+++ b/style.css
@@ -1,14 +1,4 @@
 :root {
-   /* --clr-background: hsl(252, 11%, 9%);
-   --clr-main: hsl(249, 8%, 17%);
-   --clr-main-darker: hsl(249, 11%, 13%);
-   --clr-accent: hsl(54, 83%, 66%);
-   --clr-accent-darker: hsl(54, 100%, 74%);
-   --clr-white: hsl(255, 8%, 90%);
-   --clr-outline: hsl(255, 8%, 50%);
-   --clr-gray: hsl(249, 4%, 34%);
-   --clr-checkbox-hover: 54, 83%, 66%;
-   --font-weight: 400; */
    --clr-weak: hsl(0, 70%, 52%);
    --clr-medium: hsl(54, 83%, 66%);
    --clr-strong: hsl(145, 74%, 49%);
@@ -20,7 +10,6 @@
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
            box-sizing: border-box;
 }
 
@@ -302,8 +291,8 @@ body {
    -o-transition: opacity .2s;
    transition: opacity .2s;
    z-index: 1;
-   background: -webkit-gradient(linear, left top, right top, color-stop(22.222%, var(--clr-accent)), color-stop(22.222%, var(--clr-main-darker)));
    background: -o-linear-gradient(left, var(--clr-accent) 22.222%, var(--clr-main-darker) 22.222%);
+   background: -webkit-gradient(linear, left top, right top, color-stop(22.222%, var(--clr-accent)), color-stop(22.222%, var(--clr-main-darker)));
    background: linear-gradient(to right, var(--clr-accent) 22.222%, var(--clr-main-darker) 22.222%)
 }
 
@@ -428,11 +417,17 @@ input[type="checkbox"]:checked + label:after {
 .settings__generate-icon {
    width: 1.5rem;
    height: 1.5rem;
+   -webkit-transition: -webkit-transform .2s ease-out;
+   transition: -webkit-transform .2s ease-out;
+   -o-transition: transform .2s ease-out;
    transition: transform .2s ease-out;
+   transition: transform .2s ease-out, -webkit-transform .2s ease-out;
 }
 
 .settings__generate:hover > .settings__generate-icon {
-   transform: translateX(0.375rem);
+   -webkit-transform: translateX(0.375rem);
+       -ms-transform: translateX(0.375rem);
+           transform: translateX(0.375rem);
 }
 
 @media only screen and (min-width: 1280px) {
