--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
-   gap: 5px;
+   gap: 0.3125rem;
 }
 
 .themeIcon__icon {
@@ -124,8 +124,8 @@ body {
        -ms-flex-align: center;
            align-items: center;
    padding: 1em 1.5em 1em 2em;
-   -webkit-box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
-           box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
+   -webkit-box-shadow: 0 0.9375rem 3.125rem hsl(var(--clr-shadow),0.2);
+           box-shadow: 0 0.9375rem 3.125rem hsl(var(--clr-shadow),0.2);
 }
 
 .password__generated {
@@ -155,17 +155,17 @@ body {
 
 .password__copy .tooltiptext {
    visibility: hidden;
-   width: 140px;
+   width: 8.75rem;
    background-color: var(--clr-accent);
    color: var(--clr-background);
    text-align: center;
-   border-radius: 6px;
-   padding: 5px;
+   border-radius: 0.375rem;
+   padding: 0.3125em;
    position: absolute;
    z-index: 1;
    bottom: -65%;
    left: -28%;
-   margin-left: -75px;
+   margin-left: -4.6875rem;
    opacity: 0;
    -webkit-transition: opacity 0.3s;
    -o-transition: opacity 0.3s;
@@ -177,8 +177,8 @@ body {
    position: absolute;
    top: -35%;
    right: 20%;
-   margin-left: -5px;
-   border-width: 5px;
+   margin-left: -0.3125rem;
+   border-width: 0.3125rem;
    border-style: solid;
    border-color: transparent transparent var(--clr-accent) transparent;
 }
@@ -215,8 +215,8 @@ body {
        -ms-flex-direction: column;
            flex-direction: column;
    gap: 1rem;
-   -webkit-box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
-           box-shadow: 0 15px 50px hsl(var(--clr-shadow),0.2);
+   -webkit-box-shadow: 0 0.9375rem 3.125rem hsl(var(--clr-shadow),0.2);
+           box-shadow: 0 0.9375rem 3.125rem hsl(var(--clr-shadow),0.2);
 }
 
 .settings__chars {
@@ -283,7 +283,7 @@ body {
            appearance: none;
    width: 100%;
    height: .75rem;
-   border-radius: 5px;
+   border-radius: 0.3125rem;
    margin-bottom: 1rem;
    outline: none;
    -webkit-transition: .2s;
@@ -299,8 +299,8 @@ body {
 .settings__range::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
-   width: 25px;
-   height: 25px;
+   width: 1.5625rem;
+   height: 1.5625rem;
    border-radius: 50%; 
    background: var(--clr-accent);
    cursor: pointer;
@@ -309,8 +309,8 @@ body {
 }
 
 .settings__range::-moz-range-thumb {
-   width: 25px;
-   height: 25px;
+   width: 1.5625rem;
+   height: 1.5625rem;
    border-radius: 50%; 
    background: var(--clr-accent);
    cursor: pointer;
@@ -350,7 +350,7 @@ input[type="checkbox"] + label:before {
    width: 1.25rem;
    height: 1.25rem;
    outline: 3px solid var(--clr-accent);
-   border-radius: 4px;
+   border-radius: 0.25rem;
 }
 
 input[type="checkbox"]:hover + label:before {
@@ -430,18 +430,18 @@ input[type="checkbox"]:checked + label:after {
            transform: translateX(0.375rem);
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 80em) {
    .wrapper {
       width: 32rem;
    }
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 64em) {
    .wrapper {
       width: 32rem;
    }
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 45em) {
    body {
       font-size: .9rem;
    }
@@ -450,7 +450,7 @@ input[type="checkbox"]:checked + label:after {
    }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 31.25em) {
    .password__generated {
       font-size: 1.4rem;
    }
