--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@
            box-sizing: border-box;
 }
 
+html {
+   height: 100%;
+}
+
 body {
-   height: 100vh;
+   height: 100%;
    font-family: 'Roboto', sans-serif;
    background-color: var(--clr-background);
    color: var(--clr-white);
