--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-   height: 100%;
+   min-height: 100%;
    font-family: 'Roboto', sans-serif;
    background-color: var(--clr-background);
    color: var(--clr-white);
@@ -47,6 +47,7 @@ body {
            align-items: center;
    gap: 1.2rem;
    width: 40%;
+   padding-top: 1.5rem;
 }
 
 .icons__wrap {
